# ter-music-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  README_DE.md  README_EN.md  README_ES.md  README_FR.md  README_IT.md  README_JA.md  README_JP.md  README_KO.md  README_KR.md  README_PT.md  README_RU.md  README_TC.md  RUST_GUIDE.md  build-deb.sh  build-dmg.sh  build-linux.bat  build-mac.bat  build-rpm.sh  build-win.bat
.cargo/: config.toml
linux-sysroot/: libasound2-dev.deb
linux-sysroot/usr/lib/x86_64-linux-gnu/: libasound.so.2
linux-sysroot/usr/lib/x86_64-linux-gnu/pkgconfig/: alsa.pc
src/: analyzer.rs  audio.rs  config.rs  defs.rs  desktop_lyrics.rs  desktop_lyrics1.rs  langs.rs  lyrics.rs  main.rs  playlist.rs  rank.rs  search.rs  ui.rs
src/ui/: format.rs  input.rs  layout.rs  mouse.rs  render.rs  terminal.rs  theme.rs  view_model.rs
